# commonapi_ws

capicxx-core-runtime/: CMakeLists.txt
commonapi_core_generator/configuration/org.eclipse.core.runtime/.manager/: .fileTable.7  .fileTable.8
commonapi_core_generator/configuration/org.eclipse.osgi/: framework.info.1
commonapi_core_generator/configuration/org.eclipse.osgi/.manager/: .fileTable.1  .fileTable.2
commonapi_someip_generator/configuration/org.eclipse.core.runtime/.manager/: .fileTable.7  .fileTable.8
commonapi_someip_generator/configuration/org.eclipse.osgi/: framework.info.1
commonapi_someip_generator/configuration/org.eclipse.osgi/.manager/: .fileTable.1  .fileTable.2
project/: CMakeLists.txt
project/fidl/: Attributes-SomeIP.fdepl  Attributes.fidl
project/src/: AttributesClient.cpp  AttributesService.cpp  AttributesStubImpl.cpp  AttributesStubImpl.hpp
project/src-gen/v1/commonapi/examples/: AttributesProxy.hpp  AttributesProxyBase.hpp  AttributesSomeIPProxy.cpp  AttributesSomeIPProxy.hpp  AttributesSomeIPStubAdapter.hpp  AttributesStub.hpp  AttributesStubDefault.hpp
